--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<script>
-		// TODO: create a handler
+	setSearchEngine function(){
+		console.log(check)
+	}
     window.addEventListener("load", function(){
-        // TODO: register the handler
+        setSearchEngine()
     });
 	</script>
 </head>
@@ -13,7 +15,12 @@
 <body>
 
 	<form id="searchForm">
-    <!-- TODO: add form elements -->
+      <input type="text" name="q">
+	  <label>Google<input type="radio" name="engine" value="google"></label>
+	  <label>DuckDuckGo<input type="radio" name="engine" value="duckDuckGo"></label>
+	  <label>Bing<input type="radio" name="engine" value="bing"></label>
+	  <label>Ask<input type="radio" name="engine" value="ask"></label>
+	  <input type="submit" value="Go!">
 	</form>
 
 </body>
