Updated function to work properly

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<script>
-	setSearchEngine function(){
-		console.log(check)
+	let setSearchEngine = function(){
+		console.log("check")
 	}
     window.addEventListener("load", function(){
         setSearchEngine()
